todo/todo_deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  ports:
  - port: 8080
  selector:
    app: todo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - image: 127.0.0.1:30500/todo
        name: todo
        ports:
        - containerPort: 8080
          name: todo
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
